[package]
name = "gdext_coroutines"
version = "0.8.0"
authors = ["Houtamelo"]
edition = "2021"
description = "Run Rust Async functions and Coroutines in Godot 4.4+ (through GDExtension), inspired on Unity's Coroutines design."
license = "MIT"
repository = "https://github.com/Houtamelo/gdext_coroutines"
categories = ["game-development", "api-bindings", "asynchronous"]
keywords = ["godot", "coroutines", "gdextension", "async"]
readme = "../README.md"
exclude = [
    ".idea/*"
]

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
#godot = { version = "0.1", features = ["experimental-threads"] }
godot = { version = "0.4", features = ["experimental-threads"] }
#godot = {  path="/Users/zhouzhipeng/RustroverProjects/gdext/godot", features = ["serde"]}
#smol = { version = "2.0", optional = true }
tokio = { version = "1", features = ["full"] , optional = true}
futures-lite = { version = "2.5.0", optional = true }

[features]
default = []
async = ["dep:tokio", "dep:futures-lite"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
